fix wrong margin

--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -22,5 +22,5 @@
 
 .content {
   margin-left: 350px;
-  margin-top: 80px;
+  margin-top: 50px;
 }
